Style header with 100% width.

--- a/astex.io/style.css
+++ b/astex.io/style.css
@@ -25,6 +25,7 @@ header {
   font-size: 1.5em;
   background-color: #226666;
   line-height: 3em;
+  width: 100%;
   vertical-align: middle;
   padding-left: 15px;
 }
