--- a/astex.io/style.css
+++ b/astex.io/style.css
@@ -63,12 +63,15 @@ footer {
   left: 0;
   width: 100%;
   height: 100%;
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity .3s ease-in-out;
   background-color: rgba(0,0,0,0.6);
 }
 
 .site:hover .cover {
-  display: block;
+  visibility: visible;
+  opacity: 1;
 }
 
 .site a {
