--- a/astex.io/style.css
+++ b/astex.io/style.css
@@ -62,7 +62,7 @@ footer {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 0;
   visibility: hidden;
   opacity: 0;
   transition: opacity .3s ease-in-out;
@@ -72,6 +72,7 @@ footer {
 .site:hover .cover {
   visibility: visible;
   opacity: 1;
+  height: 100%;
 }
 
 .site a {
