--- a/astex.io/style.css
+++ b/astex.io/style.css
@@ -22,6 +22,22 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-margin-after: 0;
 }
 
+h1 {
+  font-size: 2em;
+}
+
+h2 {
+  font-size: 1.5em;
+}
+
+h3 {
+  font-size: 1.3em;
+}
+
+h4, h5, h6 {
+  font-weight: bold;
+}
+
 header {
   color: #ffffff;
   font-size: 1.5em;
