--- a/astex.io/style.css
+++ b/astex.io/style.css
@@ -20,6 +20,7 @@ a:visited {
 h1, h2, h3, h4, h5, h6 {
   -webkit-margin-before: 0;
   -webkit-margin-after: 0;
+  font-weight: normal;
 }
 
 h1 {
@@ -54,6 +55,15 @@ section.body {
   height: calc(100vh - 3em - 30px);
   overflow-y: auto;
   padding: 15px;
+}
+
+section.body section {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+section.body section > h1 {
+  margin-left: 15px;
 }
 
 footer {
