--- a/astex.io/style.css
+++ b/astex.io/style.css
@@ -55,6 +55,25 @@ header {
   box-shadow: -5px 3px 3px #999;
 }
 
+.button {
+  color: inherit;
+  border: none;
+  font-weight: bold;
+  font-size: 1em;
+  background: none;
+  background-color: inherit;
+}
+.button.action {
+  color: #f0ffff;
+  background-color: #aa8439;
+  position: absolute;
+  border-radius: 50%;
+  padding: 1.5em;
+  bottom: 30px;
+  right: 30px;
+  box-shadow: 0px 0px 3px #999;
+}
+
 section.body {
   width: calc(100% - 30px);
   height: calc(100vh - 3em - 30px);
