--- a/astex.io/style.css
+++ b/astex.io/style.css
@@ -47,7 +47,7 @@ small {
 header {
   color: #ffffff;
   font-size: 1.5em;
-  background-color: #226666;
+  background-color: #008282;
   line-height: 3em;
   width: 100%;
   vertical-align: middle;
@@ -65,7 +65,7 @@ header {
 }
 .button.action {
   color: #f0ffff;
-  background-color: #aa8439;
+  background-color: #ffaa00;
   position: absolute;
   border-radius: 50%;
   padding: 1.5em;
