Make action button more yellow.

--- a/astex.io/style.css
+++ b/astex.io/style.css
@@ -65,7 +65,7 @@ header {
 }
 .button.action {
   color: #f0ffff;
-  background-color: #ffaa00;
+  background-color: #ffda00;
   position: absolute;
   border-radius: 50%;
   padding: 1.5em;
