--- a/astex.io/style.css
+++ b/astex.io/style.css
@@ -71,7 +71,11 @@ header {
   padding: 1.5em;
   bottom: 30px;
   right: 30px;
+  transition: all .1s ease-in-out;
   box-shadow: 0px 0px 3px #999;
+}
+.button.action:hover {
+  box-shadow: 0px 1px 5px #666;
 }
 
 section.body {
