Fix style typo.

--- a/astex.io/style.css
+++ b/astex.io/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #f0ffff;
-  font: sans-serif;
+  font-family: sans-serif;
   font-size: 12px;
   line-height: 1.6em;
   padding: 0;
